--- a/docs/developer/core-concepts/adjustments.mdx
+++ b/docs/developer/core-concepts/adjustments.mdx
@@ -130,7 +130,7 @@ module Spree
 end
 ```
 
-Next you need to add the class to spree `Rails.application.config.spree.adjusters` so it is included whenever adjustments are updated \(Promotion and Tax are included by default\):
+Next you need to add the class to spree `Rails.application.config.spree.adjusters` so it is included whenever adjustments are updated Promotion and Tax are included by default:
 
 ```ruby
 # NOTE: it is advisable that that Tax be implemented last so Tax is calculated correctly
