--- a/docs/developer/core-concepts/inventory.mdx
+++ b/docs/developer/core-concepts/inventory.mdx
@@ -16,7 +16,7 @@ New products created in the system can be given a starting "on hand" inventory l
 
 Stock Locations are the locations where your inventory is shipped from. Each `StockLocation` has many `stock_items` and `stock_movements`.
 
-Stock Locations can be created in the admin panel \(Configuration → Stock Locations\) or via Platform API.
+Stock Locations can be created in the admin panel Configuration → Stock Locations or via Platform API.
 
 Stock Locations have several attributes that define their properties and behavior within the Spree system. Below is a table outlining these attributes:
 
