--- a/docs/developer/core-concepts/orders.mdx
+++ b/docs/developer/core-concepts/orders.mdx
@@ -142,7 +142,7 @@ When a variant is added to an order, the price of that item is tracked along wit
 
 ## Addresses
 
-An order can link to two `Address` objects. The shipping address indicates where the order's product\(s\) should be shipped to. This address is used to determine which shipping methods are available for an order.
+An order can link to two `Address` objects. The shipping address indicates where the order's products should be shipped to. This address is used to determine which shipping methods are available for an order.
 
 The billing address indicates where the user who's paying for the order is located. This can alter the tax rate for the order, which in turn can change how much the final order total can be.
 
@@ -150,7 +150,7 @@ For more information about addresses, please read the [Addresses](/developer/cor
 
 ## Adjustments
 
-Adjustments are used to affect an order's final cost, either by decreasing it \([Promotions](promotions)\) or by increasing it \([Shipping](shipments), [Taxes](taxation)\).
+Adjustments are used to affect an order's final cost, either by decreasing it [Promotions](promotions) or by increasing it [Shipping](shipments), [Taxes](taxation).
 
 For more information about adjustments, please see the [Adjustments](adjustments) guide.
 
@@ -162,7 +162,7 @@ For more information, please read the [Payments](payments) guide.
 
 ## Return Authorizations
 
-An order can have many `ReturnAuthorization` objects. These records keeps track of which items have been authorized for return and how the user will be compensated -- either via exchanging the item\(s\) or a reimbursement.
+An order can have many `ReturnAuthorization` objects. These records keeps track of which items have been authorized for return and how the user will be compensated -- either via exchanging the items or a reimbursement.
 
 ## Updating an Order
 
