--- a/docs/developer/deployment/heroku.mdx
+++ b/docs/developer/deployment/heroku.mdx
@@ -20,7 +20,7 @@ We recommend you start and stick to Heroku if you do not have DevOps-skilled tea
 
 There are 2 types of dynos:
 
-* **Web** - for running the web interface of yuour Store \(Storefront, API, Admin Panel\)
+* **Web** - for running the web interface of yuour Store Storefront, API, Admin Panel
 * **Worker** - for running background jobs via [Active Job](https://guides.rubyonrails.org/active_job_basics.html) such as email send out, report generation, etc
 
 ### Recommended sizing
@@ -45,7 +45,7 @@ There are 2 types of dynos:
 | Memcached Cloud | Free | 1 GB |
 | Papertrail | Choklad | Fixa |
 | Redis Cloud | Free | 250 MB |
-| Scout APM | Free | Free \(small traffic\) or Eldora \(medium traffic\) |
+| Scout APM | Free | Free small traffic or Eldora medium traffic |
 | Sendgrid | Free | Bronze |
 | Sentry | Free | Small |
 
