--- a/docs/developer/deployment/performance.mdx
+++ b/docs/developer/deployment/performance.mdx
@@ -24,7 +24,7 @@ There are several configuration options you can put in `config/initializers/spre
 Spree::Api::Config[:api_v2_cache_ttl] = 3600 # TTL for cached resources in seconds
 ```
 
-This is the time when API objects will be available in cache storage. Objects such as Products also auto-expire when they are updated or one of their associated resources \(eg. Variants\) are updated also. 
+This is the time when API objects will be available in cache storage. Objects such as Products also auto-expire when they are updated or one of their associated resources eg. Variants are updated also. 
 
 ### Background jobs
 
