--- a/docs/developer/extending-spree/3rd-party-extensions.mdx
+++ b/docs/developer/extending-spree/3rd-party-extensions.mdx
@@ -45,7 +45,7 @@ description: >-
       title="Analytics Trackers"
       href="https://github.com/spree-contrib/spree_analytics_trackers"
     >
-      Adds support for Analytics Trackers \(Google Analytics & Segment\).
+      Adds support for Analytics Trackers Google Analytics & Segment.
     </Card>
     <Card
       title="MailChimp E-Commerce"
@@ -114,13 +114,13 @@ description: >-
       title="Volume Pricing"
       href="https://github.com/spree-contrib/spree_volume_pricing"
     >
-      Spree extension which supports sales volume-based pricing \(quantity discounts\).
+      Spree extension which supports sales volume-based pricing quantity discounts.
     </Card>
     <Card
       title="Products Q&A"
       href="https://github.com/TruemarkDev/spree_products_qa"
     >
-      Q&A Sections for products. Logged in users can ask a question, and then admins are able to answer it. All answered \(and accepted\) questions are displayed on a product page.
+      Q&A Sections for products. Logged in users can ask a question, and then admins are able to answer it. All answered and accepted questions are displayed on a product page.
     </Card>
   </Accordion>
 
@@ -168,7 +168,7 @@ description: >-
       title="Avatax"
       href="https://github.com/spree-contrib/spree_avatax_official"
     >
-      The new officially certified Spree Avatax \(Avalara\) extension.
+      The new officially certified Spree Avatax Avalara extension.
     </Card>
     <Card
       title="TaxJar"
