--- a/docs/developer/upgrades/3.0-to-3.1.mdx
+++ b/docs/developer/upgrades/3.0-to-3.1.mdx
@@ -13,7 +13,7 @@ bundle update
 
 ## Copy and run migrations
 
-Copy over the migrations from Spree \(and any other engine\) and run them using these commands:
+Copy over the migrations from Spree and any other engine and run them using these commands:
 
 ```bash
 rake railties:install:migrations
