--- a/docs/developer/upgrades/quickstart.mdx
+++ b/docs/developer/upgrades/quickstart.mdx
@@ -23,7 +23,7 @@ Only bug fixes, no API changes, no new features. Except as necessary for securit
 
 **Minor Y, eg. 4.2.0**
 
-New features, may contain API changes \(Serve as major versions of Semver\). Breaking changes are paired with deprecation notices in the previous minor or major release.
+New features, may contain API changes Serve as major versions of Semver. Breaking changes are paired with deprecation notices in the previous minor or major release.
 
 **Major X, eg. 4.0.0**
 
