--- a/docs/developer/customization/emails.mdx
+++ b/docs/developer/customization/emails.mdx
@@ -15,7 +15,7 @@ Spree uses [postmark templates](https://github.com/wildbit/postmark-templates), 
 Spree offers an emails preview generator for development purposes. To generate them, use the command:
 
 ```bash
-bundle exec rails g spree:emails:install
+bin/rails g spree:emails:install
 ```
 
 After that, start the rails server locally and go to: `localhost:3000/rails/mailers`
