--- a/docs/developer/customization/images.mdx
+++ b/docs/developer/customization/images.mdx
@@ -6,9 +6,16 @@ title: Images
 
 This guide explains how to change Product Images dimensions and different storage options for [ActiveStorage](https://edgeguides.rubyonrails.org/active_storage_overview.html) which is the default attachment storage system in Spree.
 
-### Image dimensions
 
-To change the default image dimensions or add new ones you need to create a decorator file `app/models/spree/image_decorator.rb`:
+## Dimensions
+
+To change the default image dimensions or add new ones you need to create a decorator file:
+
+```bash
+mkdir -p app/models/spree && touch app/models/spree/image_decorator.rb
+```
+
+with the following content:
 
 ```ruby
 module Spree
@@ -16,10 +23,13 @@ module Spree
     module ClassMethods
       def styles
         {
+          # change existing default sizes used in Admin Panel and API
           mini:    '48x48>',
           small:   '100x100>',
           product: '240x240>',
-          large:   '600x600>',
+          large:   '600x600>', 
+          # add your new size here, which will be automatically available in the API
+          my_custom_size: '1000x1000>'
         }
       end
     end
@@ -34,15 +44,42 @@ module Spree
 end
 ```
 
-You can also create image variations on the fly in your templates, eg.
+## Using image variations in templates
+
+You can also create [image variations on the fly in your templates](https://guides.rubyonrails.org/active_storage_overview.html), eg.
 
 ```erb
 <%= image_tag(main_app.url_for(@product.images.first.attachment.variant(resize: '150x150'))) %>
 ```
 
-### Using Amazon S3 as storage system
+## Storage service
 
-Please refer to the official [Active Storage documentation](https://guides.rubyonrails.org/active_storage_overview.html#amazon-s3-service)
+By default Spree will use the storage service you have set in your environment file eg. `config/environments/development.rb`:
 
-You can also use [Microsoft Azure Storage](https://guides.rubyonrails.org/active_storage_overview.html#microsoft-azure-storage-service) or [Google Cloud Storage](https://guides.rubyonrails.org/active_storage_overview.html#google-cloud-storage-service)
+```ruby
+config.active_storage.service = :amazon
+```
 
+If you have multiple storage services you can customize which storage service to use for images. This is done in the `config/initializers/spree.rb`:
+
+```ruby
+Spree.public_storage_service_name = :amazon
+```
+
+The storage name needs to match the name you configured in `config/storage.yml`.
+
+## Using CDNs
+
+To use a CDN service such as AWS Cloudfront or Cloudflare, you need to set `Spree.cdn_host` to the hostname of your CDN service. This is done in the `config/initializers/spree.rb`:
+
+```ruby
+Spree.cdn_host = 'https://mycloudfrontserviceid.cloudfront.net'
+```
+
+Spree will handle the rest as we have a built-in reverse proxy for ActiveStorage.
+
+To use CDN in your templates please use `cdn_image_url` helper:
+
+```erb
+<%= main_app.cdn_image_url(@product.images.first.attachment.variant(resize: '150x150')) %>
+```
