--- a/docs/developer/upgrades/3.4-to-3.5.mdx
+++ b/docs/developer/upgrades/3.4-to-3.5.mdx
@@ -36,7 +36,7 @@ bundle add spree_analytics_trackers
 2. Copy and run migrations:
 
 ```bash
-bundle exec rails g spree_analytics_trackers:install
+bin/rails g spree_analytics_trackers:install
 ```
 
 ## Read the release notes
