--- a/docs/developer/upgrades/4.2-to-4.3.mdx
+++ b/docs/developer/upgrades/4.2-to-4.3.mdx
@@ -28,7 +28,7 @@ bundle add spree_emails spree_backend spree_frontend
 
 These gems were merged into Spree Core in version 4.3. All of their functionality is now included in the `spree` gem so you can remove them.
 
-### \(Optional\) Remove SpreeMultiDomain
+### Optional Remove SpreeMultiDomain
 
 If you used that gem in the past you need to remove it. Multi-Store is now incorporated into Spree core and you cannot use that gem anymore.
 
@@ -41,7 +41,7 @@ If you used that gem in the past you need to remove it. Multi-Store is now incor
 2. Remove `//= require spree/frontend/spree_multi_domain` from `vendor/assets/javascripts/spree/frontend/all.js`
 3. Remove `//= require spree/backend/spree_multi_domain` from `vendor/assets/javascripts/spree/backend/all.js`
 
-### \(Optional\) Remove Spree Editor
+### Optional Remove Spree Editor
 
 Spree 4.3 includes TinyMCE 5 editor built-in. It's not recommended to use `spree_editor` gem anymore.
 
@@ -49,7 +49,7 @@ Spree 4.3 includes TinyMCE 5 editor built-in. It's not recommended to use `spree
 bundle remove spree_editor
 ```
 
-### \(Optional\) Remove Spree Static Content
+### Optional Remove Spree Static Content
 
 Spree 4.3 includes a built-in CMS. It's not recommended to use `spree_static_content`
 
