--- a/docs/developer/customization/preferences.mdx
+++ b/docs/developer/customization/preferences.mdx
@@ -281,7 +281,7 @@ In the above configuration file, three preferences have been defined:
 
 It is recommended to create the configuration file in the `lib/` directory.
 
-Extensions can also define site-wide preferences. For more information on using preferences like this with extensions, check out the [Extensions Tutorial](../extensions/extensions).
+Extensions can also define site-wide preferences. For more information on using preferences like this with extensions, check out the [Extensions Tutorial](/developer/contributing/creating-an-extension).
 
 ### Configuring Site-Wide Preferences
 
